--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 </head>
 
 <body>
+    <!-- navigation bar-->
     <div class="container-fluid navigation">
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
@@ -39,7 +40,10 @@
 
                     <ul class="navbar-nav pull-right">
                         <li class="nav-item">
-                            <a class="nav-link active" href="#">Login</a>
+                            <a class="nav-link active" href="#loginModal" data-bs-toggle="modal">Login</a>
+                        </li>
+                        <li class="nav-item">
+                            <button type="button" style="margin: 0; padding-top: 8px; padding-left: 0px;" class="btn signup" data-bs-target="#signupModal" data-bs-toggle="modal"> signup</button>
                         </li>
                     </ul>
                 </div>
@@ -47,14 +51,142 @@
         </nav>
     </div>
 
+
+    <!--body jumbotron-->
     <div class="jumbotron" id="main-container">
         <h1> Your online notes site</h1>
         <p> You can see your notes anywhere, anytime</p>
         <p> Your notes are protected and private </p>
-        <button type="button" class="btn btn-lg yellow signup"> Create an account</button>
-        <button type="button" class="btn btn-lg yellow signup"> See my notes</button>
+        <button type="button" class="btn btn-lg yellow signup" data-bs-target="#signupModal" data-bs-toggle="modal"> Create an account</button>
+        <button type="button" class="btn btn-lg yellow signup" data-bs-target="#loginModal" data-bs-toggle="modal"> See my notes</button>
     </div>
 
+    <!--signin form-->
+    <form method="post" id="loginform">
+        <div class="modal" id="loginModal" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button class="close" data-dismiss="modal">
+                    &times;
+                  </button>
+                        <h4 style="margin: 10px; text-align: center;" id="myModalLabel">
+                            Login:
+                        </h4>
+                    </div>
+                    <div class="modal-body">
+
+                        <!--Sign up message from PHP file-->
+                        <div id="loginpmessage"></div>
+
+                        <div class="form-group">
+                            <label for="email" class="sr-only"></label>
+                            <input class="form-control" type="email" name="loginemail" id="loginemail" placeholder="Email:" maxlength="50">
+                        </div>
+                        <div class="form-group">
+                            <label for="password" class="sr-only"></label>
+                            <input class="form-control" type="password" name="loginpassword" id="loginpassword" placeholder="Password" maxlength="30">
+                        </div>
+                    </div>
+                    <div class="checkbox">
+                        <label for="" style="width: 50%;"> <input type="checkbox" name="remeberme" id="rememberme"> remember me</label>
+                        <a class="pull-right" data-dismiss="modal" data-bs-target="#forgotpasswordModal" data-bs-toggle="modal">Forgot password?</a>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn pull-left" data-dismiss="modal" data-bs-target="#signupModal" data-bs-toggle="modal"> Register </button>
+                        <input class="btn yellow" style="margin: 0; background-color: #fbb034; background-image: linear-gradient(315deg, #fbb034 0%, #ffdd00 74%);" name="signup" type="submit" value="Sign in">
+                        <button type="button" class="btn" data-dismiss="modal">  Cancel</button>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </form>
+
+    <!--forgot password form-->
+    <form method="post" id="forgotpasswordform">
+        <div class="modal" id="forgotpasswordModal" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button class="close" data-dismiss="modal">
+                    &times;
+                  </button>
+                        <h4 style="margin: 10px; text-align: center;" id="myModalLabel">
+                            Forgot your password?
+                        </h4>
+                    </div>
+                    <div class="modal-body">
+
+                        <!--Sign up message from PHP file-->
+                        <div id="forgotpasswordmessage"></div>
+
+                        <div class="form-group">
+                            <label for="email" class="sr-only"></label>
+                            <input class="form-control" type="email" name="forgotpasswordemail" id="forgotpasswordemail" placeholder="Please enter your email address" maxlength="50">
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <input class="btn yellow" style="margin: 0; background-color: #fbb034; background-image: linear-gradient(315deg, #fbb034 0%, #ffdd00 74%);" name="signup" type="submit" value="submit">
+                        <button type="button" class="btn" data-dismiss="modal">
+                  Cancel
+                </button>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </form>
+
+    <!--signup form -->
+    <form method="post" id="signupform">
+        <div class="modal" id="signupModal" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button class="close" data-dismiss="modal">
+                    &times;
+                  </button>
+                        <h4 style="margin: 10px; text-align: center;" id="myModalLabel">
+                            Create your account easily
+                        </h4>
+                    </div>
+                    <div class="modal-body">
+
+                        <!--Sign up message from PHP file-->
+                        <div id="signupmessage"></div>
+
+                        <div class="form-group">
+                            <label for="username" class="sr-only"></label>
+                            <input class="form-control" type="text" name="username" id="username" placeholder="Username" maxlength="30">
+                        </div>
+                        <div class="form-group">
+                            <label for="email" class="sr-only"></label>
+                            <input class="form-control" type="email" name="email" id="email" placeholder="Email Address" maxlength="50">
+                        </div>
+                        <div class="form-group">
+                            <label for="password" class="sr-only"></label>
+                            <input class="form-control" type="password" name="password" id="password" placeholder="Choose a password" maxlength="30">
+                        </div>
+                        <div class="form-group">
+                            <label for="password2" class="sr-only"></label>
+                            <input class="form-control" type="password" name="password2" id="password2" placeholder="Confirm password" maxlength="30">
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <input class="btn yellow" style="margin: 0; background-color: #fbb034; background-image: linear-gradient(315deg, #fbb034 0%, #ffdd00 74%);" name="signup" type="submit" value="Sign up">
+                        <button type="button" class="btn" data-dismiss="modal">
+                  Cancel
+                </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </form>
+
+
+
+    <!-- footer-->
     <div class="container-fluid navigation footer">
         <div class="container">
             <p style="text-align: center; color: black; margin-top: 5px;">Created By <strong> Alzaibak Mohamad</strong></p>
